// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test DataSourceCount legendFormatter and tooltipCustomContent 1`] = `"projectManage.projectOverview.dataSourceCount.health"`;

exports[`test DataSourceCount legendFormatter and tooltipCustomContent 2`] = `"projectManage.projectOverview.dataSourceCount.risk"`;

exports[`test DataSourceCount legendFormatter and tooltipCustomContent 3`] = `
"
  <div style=\\"padding:12px 0;\\">
    <div style=\\"margin-bottom:10px;display:flex;align-items:center;justify-content:start\\">
      <div style=\\"background-color:#fbd44d;width:8px;height:8px;border-radius:50%;margin-right:12px\\"></div> 
      <div>projectManage.projectOverview.dataSourceCount.riskNum</div>
    </div>
    <div style=\\"margin-left:24px\\">undefined</div>
  </div>"
`;

exports[`test DataSourceCount should match snapshot 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px;"
            >
              <span
                class="ant-typography"
              >
                projectManage.projectOverview.dataSourceCount.title
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                aria-label="info-circle"
                class="anticon anticon-info-circle text-orange"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="info-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="ant-card-extra"
        >
          <a
            href="/project/default/data"
          >
            common.showMore
          </a>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        color="[\\"#fbd44d\\",\\"#42a2ff\\"]"
        data="[{\\"type\\":\\"MySQL\\",\\"value\\":0}]"
        height="200"
        legend="{\\"position\\":\\"right\\",\\"itemName\\":{}}"
        locale="zh-CN"
        maxcolumnwidth="40"
        mincolumnwidth="10"
        seriesfield="category"
        theme="light"
        tooltip="{\\"shared\\":false}"
        xfield="type"
        yfield="value"
      />
    </div>
  </div>
</div>
`;

exports[`test DataSourceCount should match snapshot 2`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px;"
            >
              <span
                class="ant-typography"
              >
                projectManage.projectOverview.dataSourceCount.title
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                aria-label="info-circle"
                class="anticon anticon-info-circle text-orange"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="info-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="ant-card-extra"
        >
          <a
            href="/project/default/data"
          >
            common.showMore
          </a>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        color="[\\"#fbd44d\\",\\"#42a2ff\\"]"
        data="[{\\"type\\":\\"MySQL\\",\\"value\\":4,\\"category\\":\\"risk\\",\\"instanceNames\\":\\"mysql-4、mysql-5、mysql-6、mysql-7\\"},{\\"type\\":\\"MySQL\\",\\"value\\":3,\\"category\\":\\"health\\",\\"instanceNames\\":\\"mysql-1、mysql-2、mysql-3\\"},{\\"type\\":\\"Oracle\\",\\"value\\":2,\\"category\\":\\"risk\\",\\"instanceNames\\":\\"oracle-4、oracle-5\\"},{\\"type\\":\\"Oracle\\",\\"value\\":3,\\"category\\":\\"health\\",\\"instanceNames\\":\\"oracle-1、oracle-2、oracle-3\\"},{\\"type\\":\\"DB2\\",\\"value\\":2,\\"category\\":\\"risk\\",\\"instanceNames\\":\\"db-5、db-6\\"},{\\"type\\":\\"DB2\\",\\"value\\":4,\\"category\\":\\"health\\",\\"instanceNames\\":\\"db-1、db-2、db-3、db-4\\"}]"
        height="200"
        legend="{\\"position\\":\\"right\\",\\"itemName\\":{}}"
        locale="zh-CN"
        maxcolumnwidth="40"
        mincolumnwidth="10"
        seriesfield="category"
        theme="light"
        tooltip="{\\"shared\\":false}"
        xfield="type"
        yfield="value"
      />
    </div>
  </div>
</div>
`;

exports[`test DataSourceCount should render error message 1`] = `
<div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-type-inner"
    style="height: 100%;"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px;"
            >
              <span
                class="ant-typography"
              >
                projectManage.projectOverview.dataSourceCount.title
              </span>
            </div>
            <div
              class="ant-space-item"
            >
              <span
                aria-label="info-circle"
                class="anticon anticon-info-circle text-orange"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="info-circle"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                  />
                  <path
                    d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="ant-card-extra"
        >
          <a
            href="/project/default/data"
          >
            common.showMore
          </a>
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <div
        class="ant-result ant-result-error"
        style="padding: 0px;"
      >
        <div
          class="ant-result-icon"
        >
          <span
            aria-label="close-circle"
            class="anticon anticon-close-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
              />
            </svg>
          </span>
        </div>
        <div
          class="ant-result-title"
        >
          common.request.noticeFailTitle
        </div>
        <div
          class="ant-result-subtitle"
        >
          error
        </div>
      </div>
    </div>
  </div>
</div>
`;
